@@ -1,3 +1,8 @@
+2002-03-25  Lauris Kaplinski  <lauris@ximian.com>
+
+	* gconf-property-editor.c (gconf_peditor_widget_set_guard): Test for NULL
+	gconf value
+
 2002-03-19  Richard Hestilow  <hestilow@ximian.com>
 
 	* Makefile.am: Include libbackground (used for preview-file-selector).
